# sgf-parser

./: .gitattributes  CHANGES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: branch.yaml  release.yaml
src/sgf_parser/: __init__.py  datetime_parser.py  parser.py  units.py
src/sgf_parser/models/: __init__.py  method.py  method_cpt.py  method_dp.py  method_dt.py  method_rp.py  method_slb.py  method_srs.py  method_sti.py  method_svt.py  method_tot.py  method_tr.py  method_type.py  method_wst.py  types.py
tests/data/: cpt-dt-test-1.std  cpt-dt-unicode-minus-1.std  cpt-dt-unicode-minus-2.std  cpt-test-1.cpt  cpt-test-2.cpt  cpt-test-3.cpt  cpt-test-4.cpt  cpt-test-malformed-data-1.cpt  cpt-test-malformed-date-header.cpt  cpt-test-multi-line-header.cpt  cpt-test-two-lines-header.cpt  cpt-test-with-method-block.cpt  cpt-test-wrong-type.cpt  dp-test-1.hfa  dp-test-2.hfa  dp-test-3.hfa  dp-test-4.hfa  dp-test-modified-2.hfa  dt-test-1.std  dt-test-2.dpt  dt-test-3.dpt  dt-test-4.dpt  rp-test-1.std  rp-test-2.std  slb-test-1.slb  slb-test-2.slb  slb-test-3.slb  srs-test-1.jb3  srs-test-2.jbt  srs-test-3.jbt  srs-test-4.jb2  srs-test-5.jb3  srs-test-problem-comment.jbt  svt-test-1.std  tot-malformed-code.tot  tot-test-1.tot  tot-test-2.tot  tot-test-3.tot  tot-test-4.tot  tot-test-5.tot  (+11 more)
tests/integration/: test_file_errors.py  test_parse.py  test_parse_slb.py  test_parse_tr.py
tests/unit/: test_cpt_application_class.py  test_dates.py  test_tot_depth.py  test_tot_flushing.py  test_tot_k_codes.py
