[project]
name = "sgf-parser"
version = "0.0.6"
description = "Parser for the Swedish Geotechnical Society / Svenska Geotekniska Föreningen (SGF) data format"
authors = [{ name = "Jostein Leira", email = "jostein@leira.net" }]
requires-python = ">=3.11,<4"
readme = "README.md"
maintainers = [{ name = "Jostein Leira", email = "jostein@leira.net" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.10",
    "python-dateutil>=2.9.0.post0",
    "types-python-dateutil>=2.9",
]
packages = [{ from = "src", include = "sgf_parser" }]

[project.urls]
homepage = "https://github.com/norwegian-geotechnical-institute/sgf-parser"
repository = "https://github.com/norwegian-geotechnical-institute/sgf-parser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "bandit",
    "safety",
    "pip-licenses",
    "ruff",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "skip"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = false
