[project]
name = "sgf-parser"
version = "0.0.13"
description = "Parser for the Swedish Geotechnical Society / Svenska Geotekniska Föreningen (SGF) data format"
authors = [{ name = "Jostein Leira", email = "jostein@leira.net" }]
requires-python = ">=3.11,<4"
readme = "README.md"
maintainers = [{ name = "Jostein Leira", email = "jostein@leira.net" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.10",
    "python-dateutil>=2.9.0.post0",
    "types-python-dateutil>=2.9",
]
packages = [{ from = "src", include = "sgf_parser" }]

[project.urls]
homepage = "https://github.com/norwegian-geotechnical-institute/sgf-parser"
repository = "https://github.com/norwegian-geotechnical-institute/sgf-parser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "bandit",
    "safety",
    "pip-licenses",
    "ruff",
]

[tool.uv]
exclude-newer = "P7D"
no-build = true
no-binary-package = ["sgf-parser"]

[tool.uv.audit]
ignore = [
    "GHSA-p4gq-832x-fm9v", # Safety uses nltk:
    # Natural Language Toolkit (NLTK):
    # URL-Encoded Path Traversal in nltk.data.load() Allows Arbitrary Local File Read
    "PYSEC-2026-597", # Yet another security volnerability in nltk 3.9.4
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

